--- a/HTML TUTORIAL/HTML CSS/CSS padding.html
+++ b/HTML TUTORIAL/HTML CSS/CSS padding.html
@@ -1,22 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Padding</title>
     <!-- The CSS padding property defines a padding (space) between the text and the border. -->
     <style>
-    p {
-        border: 2cm solid powderblue;
-        padding: 30px;
-      }
+      p,
+      h1 {
+        border: 2cm solid rgb(1, 39, 44);
+        margin: 2cm;
+        padding: 2cm;
+        color: red;
+        background-color: rgb(16, 121, 213);  
+     }
     </style>
-</head>
-<body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor voluptas eum non, amet rerum quo expedita nostrum molestiae. Molestias recusandae doloremque tenetur ducimus quos, ad corporis sequi dolores aspernatur ratione.</p>
-    <p>Sunt eos dolorum dicta perferendis! Ipsum suscipit similique saepe impedit consequatur totam tempora voluptatem animi vero dolorum quaerat, ex necessitatibus veniam asperiores maiores at facere exercitationem eligendi accusantium! Expedita, omnis.</p>
-    <p>Aperiam modi earum labore a facilis nam in perspiciatis voluptatum impedit illum delectus sequi minus numquam non error commodi aliquid repudiandae laborum quia, id architecto quo sapiente? Pariatur, nobis temporibus?</p>
-    
-</body>
+  </head>
+  <body>
+    <h1>Paragraphs</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor voluptas
+      eum non, amet rerum quo expedita nostrum molestiae. Molestias recusandae
+      doloremque tenetur ducimus quos, ad corporis sequi dolores aspernatur
+      ratione.
+    </p>
+    <p>
+      Sunt eos dolorum dicta perferendis! Ipsum suscipit similique saepe impedit
+      consequatur totam tempora voluptatem animi vero dolorum quaerat, ex
+      necessitatibus veniam asperiores maiores at facere exercitationem eligendi
+      accusantium! Expedita, omnis.
+    </p>
+    <p>
+      Aperiam modi earum labore a facilis nam in perspiciatis voluptatum impedit
+      illum delectus sequi minus numquam non error commodi aliquid repudiandae
+      laborum quia, id architecto quo sapiente? Pariatur, nobis temporibus?
+    </p>
+  </body>
 </html>
