--- a/HTML TUTORIAL/HTML links/HTML link Image.html
+++ b/HTML TUTORIAL/HTML links/HTML link Image.html
@@ -9,7 +9,7 @@
     <!-- To use an image as a link, just put the <img> tag inside the <a> tag:
  -->
  <a href="default.asp">
-    <img src="/ motivation.jpg" alt="image" style="width:42px;height:42px;">
+    <img src="motivation.jpg" alt="image" style="width:42px;height:42px;">
     </a>
     
 
