--- a/HTML TUTORIAL/HTML Colors/Border Color.html
+++ b/HTML TUTORIAL/HTML Colors/Border Color.html
@@ -9,7 +9,7 @@
     -->
     <h1 style="border:2px solid Tomato;">Hello World</h1>
     <h1 style="border:1in solid DodgerBlue;">Hello World</h1>
-    <h1 style="border:1cm solid Violet;">Hello World</h1>
+    <h1 style="border:2cm solid rgb(210, 7, 210);">Hello World</h1>
     
 </head>
 <body>
