--- a/HTML TUTORIAL/HTML attributes/The src Attribute.html
+++ b/HTML TUTORIAL/HTML attributes/The src Attribute.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>THe src Attribute </title>
-    <img src ="/C:\Users\md yaseen\Downloads\Quotefancy-82356-3840x2160 (1).jpg" width ="500" height ="200">
+    <img src ="C:\Users\md yaseen\OneDrive\Pictures\Quotes (1).jpeg">
 
 </head>
 <body>
