--- a/HTML TUTORIAL/HTML Colors/Background Color.html
+++ b/HTML TUTORIAL/HTML Colors/Background Color.html
@@ -7,7 +7,7 @@
     <title>Background Color</title>
     <!-- You can set the background color for HTML elements: HELLO YASEEN -->
     <h1 style="background-color: blue">HELLO YASEEN</h1>
-    <p style="background-color: aqua">
+    <p style="background-color: aqua; color:brown">
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae
       possimus at cumque voluptatibus quos soluta iste veniam optio. Voluptatum
       cupiditate magni debitis quisquam dignissimos ipsa est, pariatur earum non
