--- a/HTML TUTORIAL/HTML Quotations/HTML short quotation.html
+++ b/HTML TUTORIAL/HTML Quotations/HTML short quotation.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML q for short Quotation</title>
     <!-- The HTML <q> tag defines a short quotation. -->
-        <p>WWF's goal is to:<b></b><q>Build a future where people live in harmony with nature.</q></p></head>b></p>
+        <p>WWF's goal is to:<b></b><q>Build a future where people live in harmony with nature.</q></p>
 
 </head>
 <body>
