--- a/HTML TUTORIAL/HTML Quotations/HTML cite .html
+++ b/HTML TUTORIAL/HTML Quotations/HTML cite .html
@@ -8,7 +8,7 @@
     <p>The HTML cite element defines the title of a work.</p>
 <p>Browsers usually display cite elements in italic.</p>
 
-<img src="img_the_scream.jpg" width="220" height="277" alt="The Scream">
+<img src="../img/Quotefancy-82587-3840x2160.jpg" width="220" height="277" alt="The Scream">
 <p><cite>The Scream</cite> by Edvard Munch. Painted in 1893.</p>
 
 </head>
