--- a/HTML TUTORIAL/HTML attributes/The alt Attribute.html
+++ b/HTML TUTORIAL/HTML attributes/The alt Attribute.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The alt attribute</title>
-    <p>The required alt attribute for the <img> tag specifies an alternate text for an image, if the image for some reason cannot be displayed. This can be due to a slow connection, or an error in the src attribute, or if the user uses a screen reader.</p>
-    <img src="/img_typo.jpg" alt="Girl with a jacket">
-
+    <p>The required alt attribute for the  <img> tag specifies an alternate text for an image, if the image for some reason cannot be displayed. This can be due to a slow connection, or an error in the src attribute, or if the user uses a screen reader.</p>
+    <img src="../img/Quotefancy-82341-3840x2160.jpg" alt="Girl with a jacket">
+    
 </head>
 <body>
     
