--- a/HTML TUTORIAL/HTML Style guide/DIffernce between .htm and. html .html
+++ b/HTML TUTORIAL/HTML Style guide/DIffernce between .htm and. html .html
@@ -12,8 +12,7 @@ Both will be treated as HTML by any web browser and web server.
 
  -->
 
- <!-- while creating a file we can extension as .htm or .html
- -->
+ <!-- while creating a file we can extension as .htm or .html-->
  <!-- they both do same work -->
 </head>
 <body>
