--- a/HTML  FORMS/HTML FORM/checkboxes.html
+++ b/HTML  FORMS/HTML FORM/checkboxes.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Form Attributes</title>
+    <title>Checkboxes</title>
+<!--  The <input type="checkbox"> defines a checkbox.
 
-    <!-- This chapter describes the different attribute for the HTML <form> element -->
+Checkboxes let a user select ZERO or MORE options of a limited number of choices.-->
 </head>
 <body>
-    
+    <form>
+        <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+        <label for="vehicle1"> I have a bike</label><br>
+        <input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
+        <label for="vehicle2"> I have a car</label><br>
+        <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
+        <label for="vehicle3"> I have a boat</label>
+      </form>
+      
 </body>
 </html>
