--- a/HTML TUTORIAL/HTML Colors/Border Color.html
+++ b/HTML TUTORIAL/HTML Colors/Border Color.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">width =80% height="200px"
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +11,7 @@
     <h1 style="border:1in solid DodgerBlue;">Hello World</h1>
     <h1 style="border:2cm solid rgb(210, 7, 210);">Hello World</h1>
     
-</head>width =80% height="200px"
+</head>
 <body>
     
 </body>
