--- a/HTML TUTORIAL/HTML Colors/Color values.html
+++ b/HTML TUTORIAL/HTML Colors/Color values.html
@@ -8,7 +8,7 @@
   <!-- In HTML, colors can also be specified using RGB values, HEX values, HSL values, RGBA values, and HSLA values.
 
 The following three <div> elements have their background color set with RGB, HEX, and HSL values: -->
-    <h1 style="background-color:rgb(255, 99, 71);">...</h1>
+    <h1 style="background-color:rgb(255, 99, 71);">.</h1>
 <h1 style="background-color:#ff6347;">...</h1>
 <h1 style="background-color:hsl(9, 100%, 64%);">...</h1>
 
